Ring name server: orquestador de RTP

--- a/00AB-RingNameServer/nameServer.properties
+++ b/00AB-RingNameServer/nameServer.properties
@@ -10,25 +10,31 @@ base=2000
 #2. The prefix of a process hostnameBase hostname.
 processHostnamePrefix=serv#
 
+#3. MaxTokenValue
+maxTokenValue=10000
+
+#4. maxBenchmarkValue
+maxBenchmarckValue=100
+
 # ============================================================================================
 # Configuration of the name server
 # ============================================================================================
 
-#3. The port number of the name server.
+#5. The port number of the name server.
 nameServerPort=5353
 
 # ============================================================================================
 # Log files configuration
 # ============================================================================================
 
-#4. The label of each entry in the log file.
+#6. The label of each entry in the log file.
 labelLogFile=RingNameServer
 
-#5. The directory path where the log file will be stored.
+#7. The directory path where the log file will be stored.
 pathLog=Logs
 
-#6. The log filename.
+#8. The log filename.
 logFileName=RingNameServer.log
 
-#7. Type of the log files. info, debug. (both --> No funciona bien)
+#9. Type of the log files. info, debug. (both --> No funciona bien)
 logType=info
