--- a/00AB-RingNameServer/.classpath
+++ b/00AB-RingNameServer/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.16.jar"/>
+	<classpathentry kind="lib" path="C:/Users/joseg/Desktop/unaCloudSnapshot/00AB-RingNameServer/lib/jxl.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
