Funcionando UnaCloudSnapshot por primera vez

--- a/UnaCloudSnapshot/snapshot.properties
+++ b/UnaCloudSnapshot/snapshot.properties
@@ -8,8 +8,8 @@ nameServerHostName=localhost
 nameServerPort=5300
 
 vmname=vmtest
-virtualBoxHome=/Applications/VirtualBox.app/Contents/MacOS/
-virtualMachinesHome=/Users/carlos/VirtualBox VMs
+virtualMachinesHome=C:\\\\Users\\\\Profesor\\\\VirtualBox VMs\\\\
+virtualBoxHome=C:\\\\\\Program Files\\\\Oracle\\\\VirtualBox\\\\
 
 snapshotNamePrefix=SS
 
