--- a/00AB-RingNameServer/.project
+++ b/00AB-RingNameServer/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>00AB-RingNameServer</name>
+	<name>0-RTPTestManager</name>
 	<comment></comment>
 	<projects>
 	</projects>
