Cambios en RTPTestManager y RTP

--- a/0-RTPTestManager/RTPTestManager.properties
+++ b/0-RTPTestManager/RTPTestManager.properties
@@ -4,6 +4,8 @@
 # Configuration of the processes to register at the name server
 # ============================================================================================
 
+TestLabel=Prueba 1, 2 VMs por host
+
 #1. Base port number. The port of the process is (base + id)
 base=2000
 
@@ -16,11 +18,11 @@ maxTokenValue=10000
 #4. maxBenchmarkValue
 maxBenchmarckValue=100
 
-#5. pauseToStartRing
+#5. pauseToStartRing (seconds)
 pauseToStartRing=10
 
-#6. pauseBenchmark
-pauseBenchmark = 1
+#6. pauseBenchmark (miliseconds)
+pauseBenchmark = 0
 
 # ============================================================================================
 # Configuration of the name server
@@ -34,13 +36,13 @@ nameServerPort=5353
 # ============================================================================================
 
 #8. The label of each entry in the log file.
-labelLogFile=RingNameServer
+labelLogFile=RTPTestManager
 
 #9. The directory path where the log file will be stored.
 pathLog=Logs
 
 #10. The log filename.
-logFileName=RingNameServer.log
+logFileName=RTPTestManager.log
 
 #11. Type of the log files. info, debug. (both --> No funciona bien)
 logType=info
