Test manager ahora guarda un label y una fecha para identificar la prueba, crea un archivo de errores si existieron

--- a/0-RTPTestManager/RTPTestManager.properties
+++ b/0-RTPTestManager/RTPTestManager.properties
@@ -4,7 +4,7 @@
 # Configuration of the processes to register at the name server
 # ============================================================================================
 
-TestLabel=Prueba 1, 2 VMs por host
+testLabel=Prueba 1, 2 VMs por host
 
 #1. Base port number. The port of the process is (base + id)
 base=2000
