conexion rtp y metadataserver

--- a/0-RTPTestManager/RTPTestManager.properties
+++ b/0-RTPTestManager/RTPTestManager.properties
@@ -7,7 +7,7 @@
 testLabel=Prueba 1, 2 VMs por host. hoy
 
 #1. Base port number. The port of the process is (base + id)
-base=2000
+base=3000
 
 #2. The prefix of a process hostnameBase hostname.
 processHostnamePrefix=serv#
@@ -19,7 +19,7 @@ maxTokenValue=10000
 maxBenchmarckValue=100
 
 #5. pauseToStartRing (seconds)
-pauseToStartRing=10
+pauseToStartRing=2
 
 #6. pauseBenchmark (miliseconds)
 pauseBenchmark = 0
@@ -46,3 +46,6 @@ logFileName=RTPTestManager.log
 
 #11. Type of the log files. info, debug. (both --> No funciona bien)
 logType=info
+
+
+AdressAndPortOfMetaDataServer=localhost-5300
