Cambios antes de la prueba en la sala Waira

--- a/MetadataServer/src/co/edu/uniandes/main/snapshot.properties
+++ b/MetadataServer/src/co/edu/uniandes/main/snapshot.properties
@@ -1,10 +1,10 @@
 #Configuration properties of Processes
 #myIP=localhost
-base=2000
+base=10028
 offset=0
 
 processHostnamePrefix=serv#
-nameServerHostName=localhost
+nameServerHostName=157.253.199.206
 nameServerPort=5300
 
 vmname=vmtest
