--- a/0-RTPTestManager/RTPTestManager.properties
+++ b/0-RTPTestManager/RTPTestManager.properties
@@ -4,7 +4,7 @@
 # Configuration of the processes to register at the name server
 # ============================================================================================
 
-testLabel=Prueba 1, 2 VMs por host. hoy
+testLabel=Prueba funcional GS 1 4vm 16pm (1000000 600)
 
 #1. Base port number. The port of the process is (base + id)
 base=3000
@@ -13,13 +13,13 @@ base=3000
 processHostnamePrefix=serv#
 
 #3. MaxTokenValue
-maxTokenValue=10000
+maxTokenValue=1000
 
 #4. maxBenchmarkValue
 maxBenchmarckValue=100
 
 #5. pauseToStartRing (seconds)
-pauseToStartRing=2
+pauseToStartRing=90
 
 #6. pauseBenchmark (miliseconds)
 pauseBenchmark = 0
