--- a/MetadataServer/metadataServer.properties
+++ b/MetadataServer/metadataServer.properties
@@ -1,7 +1,7 @@
 #Configuration properties of name server
-myIP=localhost
+#myIP=localhost
 base=2000
-nameServerHostName=localhost
+#nameServerHostName=localhost
 processHostnamePrefix=serv#
 nameServerPort=5300
 
