Se cambiaron los nombres del proyecto

--- a/TestManager/tm.properties
+++ b/TestManager/tm.properties
@@ -4,7 +4,7 @@
 # Configuration of the processes to register at the name server
 # ============================================================================================
 
-testLabel=Prueba funcional GS 4vm 4pm (100K 100)
+testLabel=Prueba dic 6 de 2017 - 001
 
 #1. Base port number. The port of the process is (base + id)
 base=3000
