--- a/MetadataServer/ms.properties
+++ b/MetadataServer/ms.properties
@@ -1,9 +1,7 @@
 #Configuration properties of name server
-#myIP=localhost
 base=2000
-#nameServerHostName=localhost
 processHostnamePrefix=serv#
-nameServerPort=5300
+metadataServerPort=5300
 
 labelLogFile=MetadataServer
 pathLog=Logs
