--- a/RingTokenPassing/rtp.properties
+++ b/RingTokenPassing/rtp.properties
@@ -1,6 +1,6 @@
 #Configuration properties of ring token passing process
-nameServerHostName=localhost
-nameServerPort=5353
+testManagerHostName=localhost
+testManagerPort=5353
 
 labelLogFile=Process
 pathLog=Logs
