--- a/TestManager/tm.properties
+++ b/TestManager/tm.properties
@@ -25,11 +25,11 @@ pauseToStartRing=300
 pauseBenchmark = 0
 
 # ============================================================================================
-# Configuration of the name server
+# Configuration of the metadataServer
 # ============================================================================================
 
-#7. The port number of the name server.
-nameServerPort=5353
+#7. The port number of the metadataServer.
+metadataServerPort=5353
 
 # ============================================================================================
 # Log files configuration
