--- a/UnaCloudSnapshot/us.properties
+++ b/UnaCloudSnapshot/us.properties
@@ -1,11 +1,10 @@
 #Configuration properties of Processes
-#myIP=localhost
 base=10028
 offset=0
 
 processHostnamePrefix=serv#
-nameServerHostName=157.253.199.206
-nameServerPort=5300
+metadataServerHostName=157.253.199.206
+metadataServerPort=5300
 
 vmname=vmtest
 virtualMachinesHome=C:\\\\Users\\\\Profesor\\\\VirtualBox VMs\\\\
